examples/type_system/failing/122_hash_missing_close_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/122_hash_missing_close_brace.flx
// error[E034]: Missing Closing Delimiter
//
// Expected `}` to close hash literal.
//
//   examples/type_system/failing/122_hash_missing_close_brace.flx:21:1
//    |
// 21 | let after = 3
//    | ^^^
//
// Hint:
//   Hash literals use `{key: value, ...}` and must end with `}`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

let values = {one: 1, two: 2
let after = 3
